--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -55,9 +55,12 @@ jobs:
  
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v1
+      uses: actions/create-release@v1.1.4
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
           tag_name: ${{ steps.gitversion.outputs.SemVer }}
+          release_name: ${{ steps.gitversion.outputs.SemVer }}  
       
     - name: Upload a Release Asset
       uses: actions/upload-release-asset@v1.0.2
