--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -70,7 +70,7 @@ jobs:
         # The URL for uploading assets to the release
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         # The path to the asset you want to upload
-        asset_path: .
+        asset_path: ./mindstream-web.zip
         # The name of the asset you want to upload
         asset_name: mindstream-web.zip
         # The content-type of the asset you want to upload. See the supported Media Types here: https://www.iana.org/assignments/media-types/media-types.xhtml for more information
