--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: pip install six
+    - run: pod setup
     - run: npm i -g nativescript
     - run: tns doctor
     - run: npm run ios-unsigned
